# pytorch-sequence-models

./: .gitignore  HuggingFace Datasets Example.ipynb  LSTM Training.ipynb  Mamba Training.ipynb  README.md  REVIEW_README.md  REVIEW_SUMMARY.md  State Space Model Training.ipynb  Transformer Decoder Training.ipynb  Transformer Encoder Training.ipynb  Transformer Training.ipynb  XLSTM_REVIEW.md  XTransformer Training.ipynb  pyproject.toml
dataset/: __init__.py  huggingface_dataset.py  npz_dataset.py
models/: classifier.py  embedding.py  mamba.py  mask.py  rnn.py  state_space.py  transformer.py  xlstm.py
training/: seq2seq_rnn_attn.py
